--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       -  web/.env
     ports:
       - "8001:8020"
+    volumes:
+      - staticfiles:/app/staticfiles/
     
     command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
   
@@ -43,3 +45,6 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  staticfiles:
+        external: true
+ 
