--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 version: '3.9'
 services:
 
-  web:
-    depends_on:
-      - postgres_db
-    build: 
-      context: ./web
-      dockerfile: Dockerfile
-    image: django-k8s:3.10.7-alpine3.16
-    environment:
-      - PORT=8020
-    env_file:
-      -  web/.env
-    ports:
-      - "8001:8020"
-    volumes:
-      - staticfiles:/app/staticfiles/
-    
-    command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
-  
+  #web:
+  #  depends_on:
+  #    - postgres_db
+  #  build: 
+  #    context: ./web
+  #    dockerfile: Dockerfile
+  #  image: django-k8s:3.10.7-alpine3.16
+  #  environment:
+  #    - PORT=8020
+  #  env_file:
+  #    -  web/.env
+  #  ports:
+  #    - "8001:8020"
+  #  volumes:
+  #    - staticfiles:/app/staticfiles/
+  #  
+  #  command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
+ 3 
   postgres_db:
     image: postgres
     restart: always
@@ -46,5 +46,5 @@ volumes:
   postgres_data:
   redis_data:
   staticfiles:
-        external: true
+
  
