--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,36 @@
 version: '3.9'
 services:
 
-  #web:
-  #  depends_on:
-  #    - postgres_db
-  #  build: 
-  #    context: ./web
-  #    dockerfile: Dockerfile
-  #  image: django-k8s:3.10.7-alpine3.16
-  #  environment:
-  #    - PORT=8020
-  #  env_file:
-  #    -  web/.env
-  #  ports:
-  #    - "8001:8020"
-  #  volumes:
-  #    - staticfiles:/app/staticfiles/
-  #  
-  #  command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
- 3 
-  postgres_db:
-    image: postgres
-    restart: always
+  web:
+    depends_on:
+      - postgres_db
+    build: 
+      context: ./web
+      dockerfile: Dockerfile
+    image: django-k8s:3.10.7-alpine3.16
+    environment:
+      - PORT=8020
     env_file:
       -  web/.env
-    command: -p 5435
     ports:
-      - "5435:5435"
-    expose:
-      - 5435
+      - "8001:8020"
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - staticfiles:/app/staticfiles/
+    
+  command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh" 
+  
+#  postgres_db:
+#    image: postgres
+#    restart: always
+#    env_file:
+#      -  web/.env
+#    command: -p 5435
+#    ports:
+#      - "5435:5435"
+#    expose:
+#      - 5435
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/
   
   redis_db:
     image: redis
