--- a/.github/workflows/test_django.yaml
+++ b/.github/workflows/test_django.yaml
@@ -14,10 +14,29 @@ jobs:
     defaults:
       run:
         working-directory: ./web
+      env:
+        DJANGO_SECRET_KEY: ACasyeh--f3yERcSsNW4YhoaWJ-ChNMuJoLGAx2CiuQ
+        POSTGRES_DB: dockerdc
+        POSTGRES_PASSWORD: password
+        POSTGRES_USER: kub
+        POSTGRES_HOST: localhost
+        POSTGRES_PORT: 5432
+      services:
+        postgres_db:
+          image: postgres:14
+          env:
+            POSTGRES_DB: ${{ env.POSTGRES_DB }}
+            POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+            POSTGRES_USER: ${{ env.POSTGRES_USER }}
+            POSTGRES_HOST: ${{ env.POSTGRES_HOST }}
+          ports:
+            - 5432:5432
+
+
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v3
