--- a/.github/workflows/test_django.yaml
+++ b/.github/workflows/test_django.yaml
@@ -14,13 +14,13 @@ jobs:
     defaults:
       run:
         working-directory: ./web
-      env:
-        DJANGO_SECRET_KEY: ACasyeh--f3yERcSsNW4YhoaWJ-ChNMuJoLGAx2CiuQ
-        POSTGRES_DB: dockerdc
-        POSTGRES_PASSWORD: password
-        POSTGRES_USER: kub
-        POSTGRES_HOST: localhost
-        POSTGRES_PORT: 5432
+    env:
+      DJANGO_SECRET_KEY: ACasyeh--f3yERcSsNW4YhoaWJ-ChNMuJoLGAx2CiuQ
+      POSTGRES_DB: dockerdc
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: kub
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
       services:
         postgres_db:
           image: postgres:14
@@ -31,6 +31,11 @@ jobs:
             POSTGRES_HOST: ${{ env.POSTGRES_HOST }}
           ports:
             - 5432:5432
+          options: >-
+            --health-cmd pg_isready
+             --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5s
 
 
     strategy:
