update the django test workflow agora vai

--- a/.github/workflows/test_django.yaml
+++ b/.github/workflows/test_django.yaml
@@ -35,7 +35,7 @@ jobs:
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 5s
+          --health-retries 5
 
 
     strategy:
