--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
       with:
         token: ${{ secrets.DO_API_TOKEN_KEY }}
     - name: Login to Digital ocean container registry with short-lived credencials
-      run: doctl registry login --expire-seconds 1200
+      run: doctl registry login --expiry-seconds 1200
     - name: build container image
       working-directory: ./web
       run:
