--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,10 +33,7 @@ jobs:
     - name: build container image
       working-directory: ./web
       run:
-        docker build -f Dockerfile \ 
-           -t registry.digitalocean.com/k8s-django/django-k8s-web:latest \
-           -t registry.digitalocean.com/k8s-django/django-k8s-web:${GITHUB_SHA::7} \
-           . 
+        docker build -f Dockerfile -t registry.digitalocean.com/k8s-django/django-k8s-web:latest -t registry.digitalocean.com/k8s-django/django-k8s-web:${GITHUB_SHA::7} . 
     - name: push image to container registry.
       run:
         docker push registry.digitalocean.com/k8s-django/django-k8s-web --all-tags
