k8s deployment no github actions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,21 +19,41 @@ jobs:
         working-directory: ./web
     env:
       DJANGO_SECRET_KEY: ACasyeh--f3yERcSsNW4YhoaWJ-ChNMuJoLGAx2CiuQ
+      CLUSTER_NAME: k8s-django
+      IMAGE_NAME: django-k8s-web
+      CONTAINER_NAME: django-k8s-web
+      DEPLOYMENT_NAME: django-k8s-web-deployment
+      
  
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Install doctl
       uses: digitalocean/action-doctl@v2
       with:
-        token: ${{ secrets.DO_API_TOKEN_KEY }}
+        token: ${{secrets.DO_API_TOKEN_KEY}}
     - name: Login to Digital ocean container registry with short-lived credencials
       run: doctl registry login --expiry-seconds 1200
     - name: build container image
       working-directory: ./web
-      run:
-        docker build -f Dockerfile -t registry.digitalocean.com/k8s-django/django-k8s-web:latest -t registry.digitalocean.com/k8s-django/django-k8s-web:${GITHUB_SHA::7} . 
+      run: |
+        docker build -f Dockerfile \
+         -t registry.digitalocean.com/${{env.CLUSTER_NAME}}/${{env.IMAGE_NAME}}:latest \
+         -t registry.digitalocean.com/${{env.CLUSTER_NAME}}/${{env.IMAGE_NAME}}:${GITHUB_SHA::7} \ 
+         . 
     - name: push image to container registry.
       run:
-        docker push registry.digitalocean.com/k8s-django/django-k8s-web --all-tags
+        docker push registry.digitalocean.com/${{env.CLUSTER_NAME}}/${{env.IMAGE_NAME}} --all-tags
+    - name: K8s cluster kubeconfig file with/ short-lived creds
+      run: | 
+        doctl kubernets cluster kubeconfig save --expiry-seconds 600 ${{env.CLUSTER_NAME}}
+    - name: Update Deployment image
+      run: |
+        kubectl set image deployment/${{env.DEPLOYMENT_NAME}} ${{env.CONTAINER_NAME}}=registry.digitalocean.com/${{env.CLUSTER_NAME}}/${{env.IMAGE_NAME}}:${GITHUB_SHA::7}
+    - name: Wait for rollout to finish
+      run: |
+        kubectl rollout status deployment/${{env.DEPLOYMENT_NAME}}
+    - name: Migrate database command
+      run: |
+        export SINGLE_POD_NAME=$(kubectl get pod -l app=${{env.DEPLOYMENT_NAME}} -o jsonpath="{.items[0].metadata.name}")
+        kubectl exec -it $SINGLE_POD_NAME -- bash /app/migrate.sh
