--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,7 @@ jobs:
         docker push registry.digitalocean.com/${{env.CLUSTER_NAME}}/${{env.IMAGE_NAME}} --all-tags
     - name: K8s cluster kubeconfig file with/ short-lived creds
       run: | 
-        doctl kubernets cluster kubeconfig save --expiry-seconds 600 ${{env.CLUSTER_NAME}}
+        doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{env.CLUSTER_NAME}}
     - name: Update Deployment image
       run: |
         kubectl set image deployment/${{env.DEPLOYMENT_NAME}} ${{env.CONTAINER_NAME}}=registry.digitalocean.com/${{env.CLUSTER_NAME}}/${{env.IMAGE_NAME}}:${GITHUB_SHA::7}
