--- a/.github/workflows/test_django.yaml
+++ b/.github/workflows/test_django.yaml
@@ -11,7 +11,7 @@ jobs:
       run:
         working-directory: ./web
     env:
-      DJANGO_SECRET_KEY: {{ secrets.DJANGO_SECRET_KEY }}
+      DJANGO_SECRET_KEY: B-BV4SmNy17B7ALcDWZDgDCkak5AjqiKRJY729nkCXM
       POSTGRES_DB: dockerdc
       POSTGRES_PASSWORD: password
       POSTGRES_USER: kub
