--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,21 +46,22 @@ jobs:
         doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{env.CLUSTER_NAME}}
     - name: Update Deployment secrets
       run: |
-        cat << EOF >> web/.env.prod
-        ENV_ALLOWED_HOSTS=143.244.208.107
-        REGION=TEXAS
-        DJANGO_SUPERUSER_USERNAME={{ secrets.DJANGO_SUPERUSER_USERNAME }}
-        DJANGO_SUPERUSER_PASSWORD={{ secrets.DJANGO_SUPERUSER_PASSWORD }}
-        DJANGO_SUPERUSER_EMAIL={{ secrets.DJANGO_SUPERUSER_EMAIL }}
-        DJANGO_SECRET_KEY={{ secrets.DJANGO_SECRET_KEY }}
-        POSTGRES_DB={{ secrets.POSTGRES_DB }}
-        POSTGRES_PASSWORD={{ secrets.POSTGRES_PASSWORD }}
-        POSTGRES_USER={{ secrets.POSTGRES_USER }}
-        POSTGRES_HOST={{ secrets.POSTGRES_HOST }}
-        POSTGRES_PORT={{ secrets.POSTGRES_PORT }}
-        EOF
-        kubectl delete secret ${{env.ENV_SECRETS}}
-        kubectl create secret generic ${{env.ENV_SECRETS}} --from-env-file= .env.prod
+          cat << EOF >> web/.env.prod
+          AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
+          DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
+          DJANGO_SUERPUSER_EMAIL=${{ secrets.DJANGO_SUERPUSER_EMAIL }}
+          DJANGO_SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}
+          ENV_ALLOWED_HOST=${{ secrets.ENV_ALLOWED_HOST }}
+          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+          POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
+          POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}
+          EOF
+          kubectl delete secret django-k8s-web-prod-env
+          kubectl create secret generic django-k8s-web-prod-env --from-env-file=web/.env.prod
 
     - name: Update Deployment image
       run: |
