--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
       
  
     steps:
-    - name: Checkout codes
+    - name: Checkout code
       uses: actions/checkout@v3
     - name: Install doctl
       uses: digitalocean/action-doctl@v2
