--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,20 +17,20 @@ services:
     volumes:
       - staticfiles:/app/staticfiles/
     
-  command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh" 
+    command: sh -c "chmod +x /app/migrate.sh && sh /app/migrate.sh && /app/entrypoint.sh"
   
-#  postgres_db:
-#    image: postgres
-#    restart: always
-#    env_file:
-#      -  web/.env
-#    command: -p 5435
-#    ports:
-#      - "5435:5435"
-#    expose:
-#      - 5435
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data/
+  postgres_db:
+    image: postgres
+    restart: always
+    env_file:
+      -  web/.env
+    command: -p 5435
+    ports:
+     - "5435:5435"
+    expose:
+     - 5435
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
   
   redis_db:
     image: redis
