--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -10,5 +10,7 @@ RUN /opt/venv/bin/pip install pip --upgrade && \
     /opt/venv/bin/pip install -r requirements.txt && \
     chmod +x entrypoint.sh
 
-RUN useradd --create-home --shell /bin/bash juan
+RUN apt-get update 
+
+
 CMD ["/app/entrypoint.sh"]
