--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,7 +70,7 @@ jobs:
     - name: Wait for rollout to finish
       run: |
         kubectl rollout status deployment/${{env.DEPLOYMENT_NAME}}
-    - name: Migrate database command and collect static files
+    - name: Migrate database command and collect static files command
       run: |
         export SINGLE_POD_NAME=$(kubectl get pod -l app=${{env.DEPLOYMENT_NAME}} -o jsonpath="{.items[0].metadata.name}")
         kubectl exec -it $SINGLE_POD_NAME -- sh /app/migrate.sh
