--- a/.github/workflows/test_django.yaml
+++ b/.github/workflows/test_django.yaml
@@ -26,6 +26,7 @@ jobs:
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_HOST: ${{ env.POSTGRES_HOST }}
+          DB_IGNORE_SSL: ${{ env.DB_IGNORE_SSL }}
         ports:
           - 5432:5433
         options: >-
