--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test_django_job:
-    uses: JuanLadeira/kuber-django/.github/workflows/test_django.yaml@master
+    uses: JuanLadeira/djblogger/.github/workflows/test_django.yaml@master
   docker_build_job:
     runs-on: ubuntu-latest
     needs: [test_django_job]
