--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: [ "development" ]
   pull_request:
     branches: [ "master" ]
 
